FIX: Align category header styles

--- a/common/common.scss
+++ b/common/common.scss
@@ -25,6 +25,9 @@
 
 .custom-category-boxes-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .category {
